# design-patterns

./: .gitignore  README.md  pyproject.toml
behavioral/chain_of_responsibility/: __init__.py  implementation_1.py
behavioral/iterator/: __init__.py  implementation_1.py
behavioral/observer/: __init__.py  implementation_1.py
behavioral/strategy/: __init__.py  implementation_1.py  implementation_2.py
creational/abstract_factory/: __init__.py  implementation_1.py  implementation_2.py
creational/factory_method/: __init__.py  implementation_1.py  implementation_2.py
creational/singleton/: __init__.py  implementation_1.py  implementation_2.py  implementation_3.py
structural/adapter/: __init__.py  implementation_1.py  implementation_2.py  implementation_3.py
structural/decorator/: __init__.py  implementation_1.py  implementation_2.py
structural/facade/: __init__.py  implementation_1.py  implementation_2.py
structural/proxy/: __init__.py  implementation_1.py
